# arhem_v3

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: deploy-editor-client.yml  main.yml
editor/: .gitignore  .prettierrc.json  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
editor/.husky/: pre-commit
editor/patches/: @pixi__events.patch  next.patch
editor/src/: config.ts  constants.ts  types.ts
editor/src/app/: layout.tsx  page.tsx
editor/src/components/: AppLayout.tsx  EditorGrid.tsx  EditorGridCell.tsx  EditorHeader.tsx  EditorRoot.tsx  EditorView.tsx  EventCreateForm.tsx  EventEditForm.tsx  EventList.tsx  EventNav.tsx  EventNavActions.tsx  EventStepView.tsx  Providers.tsx  StepCreateForm.tsx  StepEditForm.tsx  TextField.tsx  TextareaField.tsx  UserMenu.tsx
editor/src/hoc/: clientOnly.tsx
editor/src/hooks/: useClippedText.ts  useEventDetails.ts  useTheme.ts  (+5 more)
src/: main.rs  models.rs
src/base/: create_tables.rs
src/event/: create_event.rs  create_event_link.rs  create_event_step.rs  get_event_links.rs  get_event_shema.rs  get_event_steps.rs  get_events.rs  get_steps.rs  mod.rs
src/system/: admin_token.rs  cors.rs  mod.rs  user_log_creation.rs  user_token.rs
src/user/: admin_login.rs  check_admin_token.rs  check_token.rs  create_user.rs  mod.rs  user_create.rs  user_login.rs
src/web/: editor.rs  mod.rs
static/: index.html
static/admin/: .prettierrc.json  Readme.md  next.config.mjs  pnpm-lock.yaml  tsconfig.json
static/css/: index.css
static/js/: index.js
(+40 files in other folders)
